# NYCU_IR

./: .gitignore  README.md  main.py  pyproject.toml
Codesearch/: README.md  fine-tuned.py  hw1_111705068.ipynb  mean_pooling.py  pre-trained.py  run.py  tfidf.py
Codesearch/data/: train_queries_proc.csv
Codesearch/results/: bm25_submission.csv
HW1/: BM25.py  bm25_submission.csv  fine-tune.py  hw1_111705068.ipynb  model.py  pre-trained.py  pre_trained_submission.csv  preprocess.py  tfi_df_submission.csv  tfidf.py
HW1/data/: code_snippets_proc.csv  test_queries.csv  test_queries_proc.csv
HW1/results/: bm25_submission.csv  fine_tuned_submission.csv  pre_trained_submission.csv  tf_idf_submission.csv
